fix: downgrade project compatibility to java 8